# desktop-notification

./: .gitignore  README.md
accept-reject-call/angular/: README.md  angular.json  package-lock.json  package.json
accept-reject-call/angular/src/: firebase-messaging-sw.js  index.html
accept-reject-call/angular/src/app/: app.component.ts
accept-reject-call/angular/src/app/components/: call-screen.component.ts  incoming-call-modal.component.ts  outgoing-call-modal.component.ts  register-screen.component.ts
accept-reject-call/angular/src/app/services/: push-subscription.service.ts  session.service.ts  websocket.service.ts
accept-reject-call/rust/: .gitignore  Cargo.toml
accept-reject-call/rust/src/: main.rs
backend/: Cargo.toml
backend/src/: main.rs
chat-app/backend/: package-lock.json  package.json  push.js  server.js  socket.js  users.js
chat-app/frontend/: package-lock.json  package.json
chat-app/frontend/public/: sw.js
chat-app/frontend/src/: styles.css
chat-app/frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts
final-demo/backend/: Cargo.toml
final-demo/backend/livekit/: docker-compose.yml  livekit.yaml
final-demo/backend/src/: fcm.rs  livekit.rs  main.rs  types.rs
final-demo/backend/src/handlers/: accept.rs  call.rs  cancel.rs  chat.rs  cut_call.rs  disconnect.rs  group.rs  group_call.rs  mod.rs  register.rs  reject.rs  store_fcm_token.rs
final-demo/frontend/: README.md  angular.json  package-lock.json  package.json
final-demo/frontend/src/: firebase-messaging-sw.js  index.html  main.ts  styles.css
final-demo/frontend/src/app/: app.component.css  app.component.html  app.component.ts
final-demo/frontend/src/app/models/: types.ts
final-demo/frontend/src/app/services/: app-state.service.ts  livekit.service.ts  (+2 more)
frontend-angular/: package-lock.json  package.json
frontend-angular/src/: index.html  styles.css
frontend-angular/src/app/: app.html  app.ts
frontend-angular/src/app/services/: push-subscription.service.ts  websocket.service.ts
frontend-react/: index.html  package-lock.json  package.json
frontend-react/public/: sw.js
frontend-react/src/: App.jsx  index.css
frontend-react/src/components/: CallScreen.jsx  IncomingCallModal.jsx  OutgoingCallModal.jsx  RegisterScreen.jsx
frontend-react/src/hooks/: usePushSubscription.js  useWebSocket.js
notification-using-fcm-token/backend/: .gitignore  Cargo.toml  app.js  package-lock.json  package.json
notification-using-fcm-token/backend/src/: main.rs
notification-using-fcm-token/frontend/: firebase-messaging-sw.js  index.html
notification-using-push-subscription/backend/: Cargo.toml
notification-using-push-subscription/backend/src/: main.rs
notification-using-push-subscription/frontend/: index.html  sw.js
push-back/: Cargo.toml
push-back/src/: main.rs
signal-angular/: angular.json  package-lock.json  package.json
signal-angular/src/: sw.js
signal-angular/src/app/components/: outgoing-call-modal.component.ts  register-screen.component.ts
signal-angular/src/app/services/: push-subscription.service.ts
(+36 files in other folders)
