[package]
name    = "signaling-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum          = { version = "0.8", features = ["ws"] }
tokio         = { version = "1",   features = ["full"] }
tower-http    = { version = "0.6", features = ["cors"] }
futures-util  = "0.3"
serde         = { version = "1",   features = ["derive"] }
serde_json    = "1"
web-push      = "0.10"