[package]
name = "push-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-push = "0.10"
tower-http = { version = "0.5", features = ["cors", "fs"] }


 